--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -309,6 +309,7 @@ form .fa-solid {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  height: 625px;
 }
 
 /*hotels section*/
@@ -330,20 +331,31 @@ form .fa-solid {
 
 .hotels-c {
   width: 90%;
-  height: 86%;
+  height: 530px;
   display: flex;
   flex-direction: column;
   background-color: inherit;
   justify-content: space-between;
   margin-top: 0;
+  
+}
+
+.c-cards-row
+{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 428px;
+  margin-bottom: 24px;
+
 }
 
 .hotels .cards-row {
   flex-direction: row;
 }
 
+ /*cards set up*/
 .card {
-  /*cards set up*/
   display: flex;
   background-color: white;
   border: 1px solid #f2f2f2;
@@ -360,8 +372,12 @@ form .fa-solid {
 .description {
   display: flex;
   flex-direction: column;
+ padding-left: 5%;
+}
+
+.hotels .description 
+{
   justify-content: space-around;
-  padding-left: 5%;
 }
 
 
@@ -376,7 +392,7 @@ form .fa-solid {
 
 .xs-card {
   flex-direction: column;
-  height: 190px;
+  height: 200px;
   flex-basis: 30%;
   padding: 5px;
 }
@@ -400,10 +416,10 @@ form .fa-solid {
   line-height: 14px;
 }
 
-#lodging .name
+.hotels .name
 {
-  margin: 5px 8px 6px 0;
-  font-size: 14px;
+  margin: 5px 0px 6px 0;
+  font-size: 15px
 }
 
 .price {
@@ -461,7 +477,6 @@ form .fa-solid {
   font-size: 16px;
   font-weight: 700;
   padding-left: 3px;
-  
 }
 
 .card-link {
@@ -482,16 +497,17 @@ aside {
   border-radius: 20px;
   justify-content: space-around;
   align-items: center;
-  height: 625px;
 }
 
 .popular-c {
   width: 80%;
-  height: 90%;
+  height: 550px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
+  margin: 45px auto 35px auto;
+  
 }
 
 aside .title {
@@ -499,7 +515,7 @@ aside .title {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding-top: 10px;
+  padding-top: 2px;
 }
 
 /*title star position*/
@@ -513,7 +529,7 @@ aside .title {
 .popular-c .cards-row
 {
   flex-direction: column;
-  flex-basis: 87%;
+  flex-basis: 500px;
 }
 
 .s-card {
@@ -533,8 +549,19 @@ aside .title {
 
 aside .description 
 {
-  padding-right: 8px;
+ justify-content:space-between ;
+ padding: 15px 8px 5px 20px ;
+ 
 }
+
+aside .name
+{
+  margin-top: 0;
+  font-size: 15px
+}
+
+
+
 
 /*Notation du top populaire */
 .hotel-card7 .fa-solid:nth-child(-n+5)
@@ -667,6 +694,11 @@ aside .description
   height: 140px;
 }
 
+#activities .description
+{
+  justify-content: space-around;
+  padding-left: 21px;
+}
 
 .cc2 .description {
   height: 55px;
@@ -687,18 +719,16 @@ aside .description
 
 footer {
   background-color: #f2f2f2;
-  height: 220px;
+  height: 212px;
   display: flex;
   align-items: center;
+  padding-bottom: 5px;
+  padding-left: 50px;
 }
 
 .footer-c {
   display: flex;
-  width: 71%;
-  height: 55%;
-  margin-left: 3%;
-  justify-content: space-between;
-  margin-bottom: 45px;
+  width: 93%;
 }
 
 .c-footer-links {
@@ -715,7 +745,20 @@ footer ul {
   line-height: 28px;
 }
 
+
+
 h3 {
   font-weight: 700;
   font-size: 18px;
+  margin-bottom: 13px;
+}
+
+.about
+{
+  margin-right: 225px;
+}
+
+.charter
+{
+  margin-right: 290px;
 }
